# fenrir

./: README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  fenrir.yml  python-app.yml  test.yml  tests.yml
fenrir/: arper.py  fenrir.py  filehandler.py  firewall.py  getmacvendors.py  scanner.py  vpn.py
fenrircore/: fenrir.py  filehandler.py  scanner.py  vpn.py
tests/: fenrir_test.py  filehandler_test.py  test_fenrir.py  vpn_test.py
