[tool.poetry]
name = "fenrir"
version = "0.2.0"
description = "use Fenrir to route configured network devices trough configured VPN tunnel"
authors = ["Hannes Hofer <Hannes.Hofer@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.6"
requests = "^2.24"
cryptography = "^3.3"
pyroute2 = "^0.7"
scapy = "^2.4"
python-iptables = "^1.0"


[tool.poetry.scripts]
fenrir = 'fenrir.fenrir:main'
